--- a/FE/src/app/routes/about-us/about-us.component.html
+++ b/FE/src/app/routes/about-us/about-us.component.html
@@ -1,92 +1,83 @@
-<!--<section class="about-us margin-medium">-->
-<!--  <div class="container">-->
-<!--    <div class="row">-->
-<!--      <div class="nav-tabs-wrap products-tab">-->
+<div class="site-banner">
+  <div class="banner-content">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="text-content colored">
+            <h1>Thông tin doanh nghiệp</h1>
+            <div class="breadcum-items">
+              <span class="item color-primary"><a href="#">Trang chủ /</a></span>
+              <span class="item colored">Liên hệ</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div><!--site-banner-->
 
-<!--        <h2 class="section-title text-center">About Us</h2>-->
+<section class="fs-5 contact-information padding-large mt-3">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6 p-0 mb-3">
+        <div class="container">
 
-<!--        <nav>-->
-<!--          <div class="nav nav-tabs padding-small text-hover" id="nav-tab" role="tablist">-->
-<!--            <a class="nav-link active" id="nav-missions-tab" data-bs-toggle="tab" data-bs-target="#nav-missions" role="tab" aria-controls="nav-missions" aria-selected="true">Our Missions</a>-->
-<!--            <a class="nav-link" id="nav-values-tab" data-bs-toggle="tab" data-bs-target="#nav-values" role="tab" aria-controls="nav-values" aria-selected="false">Our Values-->
-<!--            </a>-->
-<!--            <a class="nav-link" id="nav-goals-tab" data-bs-toggle="tab" data-bs-target="#nav-goals" role="tab" aria-controls="nav-goals" aria-selected="false">Our Goals</a>-->
-<!--          </div>-->
-<!--        </nav>-->
+          <div class="contact-detail d-flex flex-wrap">
+            <div class="detail mr-6 mb-4">
+              <h3>Họ tên</h3>
+              <ul class="list-unstyled">
+                <li><span><nz-avatar nzIcon="user" [nzSrc]="avaHoang"></nz-avatar></span><i class="icon icon-phone"></i> Nhữ Sỹ Hoàng (Chủ tịch)</li>
+                <li><span><nz-avatar nzIcon="user" [nzSrc]="avaThanh"></nz-avatar></span><i class="icon icon-phone"></i> Phạm Phúc Thành</li>
+                <li><span><nz-avatar nzIcon="user" [nzSrc]="avaTan"></nz-avatar></span><i class="icon icon-phone"></i> Kiều Văn Tân</li>
+              </ul>
+            </div><!--detail-->
+            <div class="detail mb-4">
+              <h3>Mã số thuế</h3>
+              <ul class="list-unstyled">
+                <li><i class="icon icon-envelope-o"></i>
+                  <a >1654264</a></li>
+                <li><i class="icon icon-envelope-o"></i>
+                  <a >1547064</a></li>
+                <li><i class="icon icon-envelope-o"></i>
+                  <a >175664</a></li>
+              </ul>
+            </div><!--detail-->
+            <div class="address detail mb-4">
+              <h3>Trụ sở chính</h3>
+              <ul class="list-unstyled">
+                <li><i class="icon icon-map-marker"></i>
+                  55 Giải phóng Đồng Tâm Hai Bà Trưng Hà Nội</li>
+              </ul>
+            </div><!--detail-->
+            <div class="detail mb-4">
+              <h3>Mạng xã hội</h3>
+              <div class="social-links flex-container">
+                <a  target="_blank" href="https://www.facebook.com/hoang.nhu.7140497"><span class="fs-4" nz-icon nzType="facebook" nzTheme="outline"></span></a>
+                <a  target="_blank" href="#"><span class="fs-4"  nz-icon nzType="instagram" nzTheme="outline"></span></a>
+                <a  target="_blank" href="#"><span class="fs-4"  nz-icon nzType="twitter" nzTheme="outline"></span></a>
+                <a  target="_blank" href="#"><span class="fs-4"  nz-icon nzType="youtube" nzTheme="outline"></span></a>
+              </div><!--social-links-->
+            </div><!--detail-->
 
-<!--        <div class="tab-content" id="nav-tabContent">-->
-<!--          <div class="tab-pane fade show active" role="tabpanel" id="nav-missions" aria-labelledby="nav-missions-tab">-->
-<!--            <div class="col-md-12">-->
-<!--              <div class="row">-->
+          </div><!--contact-detail-->
+        </div>
+      </div><!--col-md-6-->
 
-<!--                <div class="col-md-6">-->
-<!--                  <div class="product-image" style="background-image: url(../../../assets/images/tabimg.jpg);background-size: cover;"></div>-->
-<!--                </div>-->
+      <div class="col-md-6 p-0">
+        <div class="container">
+          <div class="row">
+            <div class="contact-information col-md-12">
+              <h2>Lời cảm ơn</h2>
+              <p>Rất mong nhận được đánh giá 4.0 <span nz-icon nzType="star" nzTheme="outline"></span> sau khi trải nghiệm</p>
+            </div><!--contact-information-->
+          </div>
+        </div>
+      </div><!--col-md-6-->
 
-<!--                <div class="text-content col-md-6 bg-Peach p-5">-->
-<!--                  <h3 class="mb-4">-->
-<!--                    Providing quality products for all be happy and peace-->
-<!--                  </h3>-->
-<!--                  <p>A gorgeous selection of our favorites for a client to send as a new year’s gift. A gorgeous selection of our favorites for a client to send as a new year’s gift.-->
-<!--                    A gorgeous selection of our favorites for a client to send as a new year’s gift.</p>-->
-<!--                  <p>A gorgeous selection of our favorites for a client to send as a new year’s gift. A gorgeous selection of our favorites for a client to send as a new year’s gift.</p>-->
-<!--                  <div class="pix_btn mt-4">-->
-<!--                    <a href="#" class="btn-hvr-effects">read more</a>-->
-<!--                  </div>-->
-<!--                </div>-->
-<!--              </div>-->
-<!--            </div>&lt;!&ndash;content&ndash;&gt;-->
-<!--          </div>&lt;!&ndash;tab-pane&ndash;&gt;-->
+    </div>
+  </div>
+</section>
 
-<!--          <div class="tab-pane fade" role="tabpanel" id="nav-values" aria-labelledby="nav-values-tab">-->
-<!--            <div class="col-md-12">-->
-<!--              <div class="row">-->
-
-<!--                <div class="col-md-6">-->
-<!--                  <div class="product-image" style="background-image: url(../../../assets/images/tabimg1.jpg);background-size: cover;"></div>-->
-<!--                </div>-->
-
-<!--                <div class="text-content col-md-6 bg-Peach p-5">-->
-<!--                  <h3 class="mb-4">-->
-<!--                    This products for all be happy and peace-->
-<!--                  </h3>-->
-<!--                  <p>A gorgeous selection of our favorites for a client to send as a new year’s gift. A gorgeous selection of our favorites for a client to send as a new year’s gift. A gorgeous selection of our favorites for a client to send as a new year’s gift.</p>-->
-<!--                  <div class="pix_btn mt-4">-->
-<!--                    <a href="#" class="btn-hvr-effects">read more</a>-->
-<!--                  </div>-->
-<!--                </div>-->
-<!--              </div>-->
-<!--            </div>&lt;!&ndash;col-md-12&ndash;&gt;-->
-<!--          </div>&lt;!&ndash;tab-panel&ndash;&gt;-->
-
-<!--          <div class="tab-pane fade" role="tabpanel" id="nav-goals" aria-labelledby="nav-goals-tab">-->
-<!--            <div class="col-md-12">-->
-<!--              <div class="row">-->
-
-<!--                <div class="col-md-6">-->
-<!--                  <div class="product-image" style="background-image: url(../../../assets/images/tabimg.jpg);background-size: cover;"></div>-->
-<!--                </div>-->
-
-<!--                <div class="text-content col-md-6 bg-Peach p-5">-->
-<!--                  <h3 class="mb-4">-->
-<!--                    A gorgeous selection of our favorites for a client to send as a new year’s gift.-->
-<!--                  </h3>-->
-<!--                  <p>A gorgeous selection of our favorites for a client to send as a new year’s gift. A gorgeous selection of our favorites for a client to send as a new year’s gift. A gorgeous selection of our favorites for a client to send as a new year’s gift.</p>-->
-<!--                  <div class="pix_btn mt-4">-->
-<!--                    <a href="#" class="btn-hvr-effects">read more</a>-->
-<!--                  </div>-->
-<!--                </div>-->
-<!--              </div>-->
-<!--            </div>&lt;!&ndash;content&ndash;&gt;-->
-<!--          </div>&lt;!&ndash;tab-panel&ndash;&gt;-->
-
-<!--        </div>&lt;!&ndash;tab-content&ndash;&gt;-->
-
-<!--      </div>&lt;!&ndash;-with-nav-tabs-&ndash;&gt;-->
-<!--    </div>-->
-<!--  </div>-->
-
-<!--</section>-->
 <agm-map [latitude]="lat" [longitude]="lng">
   <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
 </agm-map>
