--- a/FE/src/app/routes/cart/cart.component.html
+++ b/FE/src/app/routes/cart/cart.component.html
@@ -8,7 +8,7 @@
   <ng-container *nzDrawerContent>
     <div *ngIf="(listProductCarts.length === 0 )" class="d-flex align-items-center flex-column">
       <img src="../../../assets/product/empty_cart.png">
-      <button (click)="closeDrawer()" routerLink="/" nzSize="large" nzShape="round" nz-button nzDanger>Keep buying
+      <button (click)="closeDrawer()" routerLink="/" nzSize="large" nzShape="round" nz-button nzDanger>Tiếp tục mua hàng
       </button>
     </div>
     <div *ngIf="(listProductCarts.length !== 0 )">
