--- a/FE/src/app/routes/detail-product/detail-product.component.html
+++ b/FE/src/app/routes/detail-product/detail-product.component.html
@@ -37,10 +37,10 @@
         </ng-template>
       </nz-list>
       <nz-comment class="pt-5">
-        <nz-avatar nz-comment-avatar nzIcon="user" [nzSrc]="emptyImage"></nz-avatar>
+        <nz-avatar nz-comment-avatar nzIcon="user" [nzSrc]="emptyAva"></nz-avatar>
         <nz-comment-content>
           <nz-form-item>
-            <textarea [disabled]="isLogin ? false : true" maxlength="4" [placeholder]="isLogin ? 'Mời nhập bình luận của bạn' : 'Mời đăng nhập để có thể thêm bình luận'" [(ngModel)]="inputValue" nz-input rows="4"></textarea>
+            <textarea [disabled]="isLogin ? false : true" [placeholder]="isLogin ? 'Mời nhập bình luận của bạn' : 'Mời đăng nhập để có thể thêm bình luận'" [(ngModel)]="inputValue" nz-input rows="4"></textarea>
           </nz-form-item>
           <nz-form-item>
             <button style="background-color: #CE3C83" class="color-white button mt-0" nz-button [nzLoading]="submitting" (click)="submit()">
@@ -51,22 +51,49 @@
       </nz-comment>
       <nz-divider nzText="Bình luận" nzOrientation="left"></nz-divider>
 <!--      list comment-->
-      <nz-comment nzAuthor="Han Solo">
-        <nz-avatar
-          nz-comment-avatar
-          nzIcon="user"
-          [nzSrc]="emptyImage"
-        ></nz-avatar>
-        <nz-comment-content>
-          <p>
-            We supply a series of design principles, practical patterns and high quality design resources (Sketch and
-            Axure), to help people create their product prototypes beautifully and efficiently.
-          </p>
-        </nz-comment-content>
-        <nz-comment-action>Reply to</nz-comment-action>
-      </nz-comment>
+      <ng-container *ngFor="let item of listComments">
+        <nz-comment [nzAuthor]="item.userName">
+          <nz-avatar
+            nz-comment-avatar
+            nzIcon="user"
+            [nzSrc]="emptyAva"
+          ></nz-avatar>
+          <nz-comment-content>
+            <p>
+              {{item.commentText}}
+            </p>
+          </nz-comment-content>
+          <nz-comment-action>
+        <span
+          nz-tooltip
+          nzTitle="Like"
+          nz-icon
+          nzType="like"
+          [nzTheme]="likes > 0 ? 'twotone' : 'outline'"
+          (click)="like()"
+        ></span>
+            <span class="count like">{{ likes }}</span>
+          </nz-comment-action>
+          <nz-comment-action>
+        <span
+          nz-tooltip
+          nzTitle="Dislike"
+          nz-icon
+          nzType="dislike"
+          [nzTheme]="dislikes > 0 ? 'twotone' : 'outline'"
+          (click)="dislike()"
+        ></span>
+            <span class="count dislike">{{ dislikes }}</span>
+          </nz-comment-action>
+          <nz-comment-action>Phản hồi
+          </nz-comment-action>
+        </nz-comment>
+      </ng-container>
     </div>
   </section>
 </div>
 <app-cart #cart></app-cart>
 
+<ng-template #contentTemplate>
+  123
+</ng-template>
