--- a/FE/src/app/routes/footer/footer.component.html
+++ b/FE/src/app/routes/footer/footer.component.html
@@ -5,28 +5,28 @@
 
         <div class="col-md-3 footer-logo text-center mb-3">
           <img src="../../../assets/images/28565132.jpg" style="width: 91%" class="mb-3">
-          <p><span class="fw-bold">Adress:</span> 55 Giai phong Dong Tam Hai Ba Trung Ha Noi</p>
+          <p><span class="fw-bold">Địa chỉ:</span> 55 Giải phóng Đồng Tâm Hai Bà Trưng Hà Nội</p>
         </div>
 
         <div class="col-md-5 mr-5 mb-3">
           <div class="widget-newsletter mb-5">
-            <h4 class="widget-title">Subscribe To Our Newletter</h4>
+            <h4 class="widget-title">Theo dõi chúng tôi bằng email</h4>
             <div class="newsletter-button d-flex">
-              <input type="text" name="Subscribe" placeholder="Your Email Address">
-              <button class="btn-hvr-effects">Subscribe</button>
+              <input type="text" name="Subscribe" placeholder="Email của bạn">
+              <button class="btn-hvr-effects">Theo dõi</button>
             </div>
 
           </div><!--widget-newsletter-->
 
           <div class="working-schedule">
-            <h4 class="widget-title">Our Work Time</h4>
+            <h4 class="widget-title">Giờ làm việc</h4>
             <div class="time-list d-flex">
               <ul class="list-unstyled mr-5">
-                <li>Monday - Friday</li>
+                <li>Thứ 2 - Thứ 5</li>
                 <li>8:00am - 8:30 pm</li>
               </ul>
               <ul class="list-unstyled">
-                <li>Saturday - Sunday</li>
+                <li>Thứ 7 - Chủ Nhật</li>
                 <li>10:00am - 16:00 pm</li>
               </ul>
             </div>
@@ -35,15 +35,13 @@
 
         <div class="col-md-2">
           <div class="quick-links">
-            <h4 class="widget-title">Quick Links</h4>
+            <h4 class="widget-title">Truy cập nhanh</h4>
             <div class="footer-menu">
               <ul class="list-unstyled">
-                <li><a href="#">Home</a></li>
-                <li><a href="about.html">About us</a></li>
-                <li><a href="#">Gallery</a></li>
-                <li><a href="#">Shop</a></li>
-                <li><a href="blog.html">Blogs</a></li>
-                <li><a href="contact.html">Contact us</a></li>
+                <li><a href="#">Trang chủ</a></li>
+                <li><a routerLink="/about-us" href="about.html">Thông tin về chúng tôi</a></li>
+                <li><a routerLink="/all-product" href="#">Cửa hàng</a></li>
+                <li><a routerLink="/order-list" href="#">Đơn hàng</a></li>
               </ul>
             </div>
           </div>
