--- a/FE/src/app/routes/special-product/special-product.component.html
+++ b/FE/src/app/routes/special-product/special-product.component.html
@@ -2,15 +2,15 @@
   <div class="item-content">
     <div class="container">
       <div class="row">
-        <div class="col-md-6 color-white">
-          <h2 class="section-title color-white mb-4">
-            Chocolate Mousse
+        <div class="bestsalerInfo deepPinkColor col-md-6">
+          <h2 class="deepPinkColor section-title mb-4">
+            Nước ép từ thiên nhiên
           </h2>
-          <p>All of our products are made from scratch using family recipes with the highest quality ingredients. We bake and sell fresh daily to ensure only the best products are sold to our customers.</p>
+          <p>Nước ép trái cây là một loại thức uống được rất nhiều người yêu thích bởi hương vị tuyệt vời mà nó sở hữu. Điều đáng nói hơn là thứ thức uống này còn là người bạn thân thiết, đem đến những lợi ích cho sức khỏe. Vậy bạn đã thực sự biết hết về tác dụng của nó chưa?</p>
 
           <div class="pix_btn mt-4">
-            <a class="btn btn-outline-light">
-              <span>Mua ngay</span>
+            <a class="btn">
+              <span routerLink="/all-product">Mua ngay</span>
             </a>
           </div>
         </div><!--item-content-->
