--- a/FE/src/app/routes/testimonials/testimonials.component.html
+++ b/FE/src/app/routes/testimonials/testimonials.component.html
@@ -6,49 +6,25 @@
 
         <div class="testimonial-slider">
           <div class="testimonials-inner">
-            <div class="rating padding-small">
-              <i class="icon icon-star"></i>
-              <i class="icon icon-star"></i>
-              <i class="icon icon-star"></i>
-              <i class="icon icon-star"></i>
-              <i class="icon icon-star"></i>
-            </div>
-            <p class="animated zoomIn">“Bakery is ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.”</p>
+            <p class="animated zoomIn font-cursive">“Mình thấy nước của Sốp ngon hơn mấy chỗ khác thật, sau khi dùng liệu trình da đẹp hẳn, lại giảm cân hiệu quả
+              .Mình rất thích các loại thức uống vị trái cây, không chỉ cung cấp nhiều vitamin cần thiết, lượng chất xơ vừa đủ giúp tăng cường hệ miễn dịch mà vị chua chua,
+              ngọt thanh của thức uống vị trái cây sẽ giúp giải nhiệt hiệu quả trong mùa hè này.”</p>
             <div class="testimonial-author">
-              <img src="../../../assets/images/default.png" alt="jane">
-              <span class="name d-flex justify-content-center mt-3">Jane Marie</span>
+              <img style="width: 17%; border-radius: 20px" src="../../../assets/imageMain/TieuVy.jpg" alt="jane">
+              <span class="name d-flex justify-content-center mt-1 fs-4">Hoa hậu Trần Tiểu Vy</span>
             </div>
           </div><!--reviews-info-->
 
           <div class="testimonials-inner">
-            <div class="rating padding-small">
-              <i class="icon icon-star"></i>
-              <i class="icon icon-star"></i>
-              <i class="icon icon-star"></i>
-              <i class="icon icon-star"></i>
-              <i class="icon icon-star"></i>
-            </div>
-            <p class="animated zoomIn">This is absolute best product adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.”</p>
-            <div class="testimonial-author">
-              <img src="../../../assets/images/default.png" alt="simran">
-              <span class="name d-flex justify-content-center mt-3">Simran</span>
+
+            <p class="animated zoomIn font-cursive">"Đồ uống của sốp có các hương liệu thực phẩm được chiết xuất từ ổi, chanh Philippines, thanh yên Nhật (yuzu) hay bạch đậu khấu của Ấn Độ … sẽ tạo nên mùi vị mới mẻ, kích thích vị giác và bổ sung nguồn
+              dinh dưỡng dồi dào hơn thay vì các loại trái cây quen thuộc khác. Rấc là mê!!”</p>
+            <div clas="testimonial-author">
+              <img style="width: 17%; border-radius: 20px" src="../../../assets/imageMain/STjpg.jpg" alt="simran">
+              <span class="name d-flex justify-content-center mt-1 fs-4">Ca sĩ Sơn Tùng MTP</span>
             </div>
           </div><!--reviews-info-->
 
-          <div class="testimonials-inner">
-            <div class="rating padding-small">
-              <i class="icon icon-star"></i>
-              <i class="icon icon-star"></i>
-              <i class="icon icon-star"></i>
-              <i class="icon icon-star"></i>
-              <i class="icon icon-star"></i>
-            </div>
-            <p class="animated zoomIn">“I really love this product sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.”</p>
-            <div class="testimonial-author">
-              <img src="../../../assets/images/default.png" alt="jane">
-              <span class="name d-flex justify-content-center mt-3">John Marie</span>
-            </div>
-          </div><!--reviews-info-->
 
         </div><!--testimonial-slider-->
 
