--- a/FE/src/app/routes/all-product/all-product.component.html
+++ b/FE/src/app/routes/all-product/all-product.component.html
@@ -6,10 +6,10 @@
           <div class="row">
             <div class="col-md-12">
               <div class="colored">
-                <h1>Shop</h1>
+                <h1>Cửa hàng</h1>
                 <div class="breadcum-items">
-                  <span class="item"><a href="../../../index.html">Home /</a></span>
-                  <span class="item colored">Shop</span>
+                  <span class="item"><a href="../../../index.html">Trang chủ /</a></span>
+                  <span class="item colored">Cửa hàng</span>
                 </div>
               </div>
             </div>
