--- a/eShopSolution/eShopSolution.AdminApp/Views/Login/Index.cshtml
+++ b/eShopSolution/eShopSolution.AdminApp/Views/Login/Index.cshtml
@@ -280,29 +280,30 @@
     
 <div class="container" id="container">
 	<div class="form-container sign-up-container">
-		<form action="~/User/Create" method="post">
-			<h1>Create Account</h1>
-			<div class="social-container">
+			<form action="~/Login/RegisterUser" method="post">
+				<h1>Create Account</h1>
+				<div class="social-container">
 					<a href="https://www.facebook.com/dialog/oauth?client_id=@(ViewBag.Fbsetting.FacebookAppId)&redirect_uri=@(ViewBag.Fbsetting.FacebookRedirectUri)&&response_type=code&scope=email"
-				   class="social">
-				   <i class="fab fa-facebook-f"></i></a>
+					   class="social">
+						<i class="fab fa-facebook-f"></i>
+					</a>
 					<a href="https://accounts.google.com/o/oauth2/auth?client_id=@(ViewBag.Ggsetting.GoogleClientId)&redirect_uri=@(ViewBag.Ggsetting.GoogleRedirectUri)&response_type=code&scope=@(ViewBag.Ggsetting.Scope)"
-				   class="social"><i class="fab fa-google-plus-g"></i></a>
-				<a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
-			</div>
-				<div asp-validation-summary="All" class="text-danger"></div>
-			<span>or use your email for registration</span>
-				<input type="text" name="FirstName" placeholder="FirstName" required/>
+					   class="social"><i class="fab fa-google-plus-g"></i></a>
+					<a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
+				</div>
+				<div asp-validation-summary="All" class="text-danger">@TempData["result"]</div>
+				<span>or use your email for registration</span>
+				<input type="text" name="FirstName" placeholder="FirstName" required />
 				<input type="text" name="LastName" placeholder="LastName" required />
-				<input type="datetime" name="Dob" placeholder="Date of Birth" required />
+				<input type="datetime-local" name="Dob" placeholder="Date of Birth" required />
 				<input type="email" name="Email" placeholder="Email" required />
 				<input type="number" name="PhoneNumber" placeholder="PhoneNumber" required />
-				<input type="text" name="UserName"  placeholder="UserName" required />
-				<input pattern=".{8,}" type="password" id="password" name="PassWord" placeholder="PassWord" required />
-				<input pattern=".{8,}" type="password" id="confirm_password" name="ConfirmPassword" placeholder="ConfirmPassword" required />
-			
-				<button>Sign Up</button>
-		</form>
+				<input type="text" name="UserName" placeholder="UserName" required />
+				<input type="password" id="password" name="PassWord" placeholder="PassWord" required />
+				<input type="password" id="confirm_password" name="ConfirmPassword" placeholder="ConfirmPassword" required />
+
+				<button id="register-user">Sign Up</button>
+			</form>
 	</div>
 	<div class="form-container sign-in-container">
 			<form asp-action="Index" asp-controller="Login" method="post">
@@ -335,6 +336,7 @@
 		</form>
 	</div>
 	<div class="overlay-container">
+			
 		<div class="overlay">
 			<div class="overlay-panel overlay-left">
 				<h1>Welcome Back!</h1>
